Update index.html final

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -794,8 +794,8 @@
         <div class="container">
             <div class="logo">PokéBuilder</div>
             <div class="nav-links">
-                <a href="#pokedex" id="nav-pokedex">Pokédex</a>
-                <a href="#teams" id="nav-teams">My Teams</a>
+                <a href="#pokedex-page" id="nav-pokedex">Pokédex</a>
+                <a href="#teams-page" id="nav-teams">My Teams</a>
                 <button id="auth-btn">Login / Signup</button>
             </div>
         </div>
