--- a/app/static/pokedex.html
+++ b/app/static/pokedex.html
@@ -71,6 +71,7 @@
             <div class="nav-links">
                 <a href="/pokedex.html">Pokédex</a>
                 <a href="/teams.html" id="nav-teams">My Teams</a>
+                <a href="/battle.html">PokéStreak</a>
                 <a href="/auth.html" id="auth-btn">Login / Signup</a>
             </div>
         </div>
