--- a/app/static/landing.html
+++ b/app/static/landing.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;900&family=Fredoka+One:wght@400&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
     <style>
         :root {
             --primary-color: #3B4CCA;
@@ -22,11 +23,20 @@
         * { box-sizing: border-box; margin: 0; padding: 0; }
         body {
             font-family: var(--font-family);
-            background: linear-gradient(135deg, var(--light-color) 0%, #e2e8f0 100%);
+            background: var(--light-color);
             color: var(--dark-color);
             line-height: 1.6;
         }
-        .container { max-width: 1200px; margin: auto; padding: 0 20px; }
+        .container { max-width: 1000px; margin: auto; padding: 0 20px; }
+        button {
+            font-family: var(--font-family);
+            font-weight: 700;
+            border: none;
+            padding: 12px 24px;
+            border-radius: 20px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
         .navbar {
             background: var(--primary-gradient);
             color: #fff;
@@ -63,16 +73,15 @@
             width: 25px;
             height: 3px;
             margin: 5px auto;
-            -webkit-transition: all 0.3s ease-in-out;
             transition: all 0.3s ease-in-out;
             background-color: white;
         }
-        main { padding: 40px 0; }
-        #landing-page {
+        .hero-section {
             text-align: center;
-            padding: 100px 20px;
+            padding: 80px 20px 60px;
+            background: linear-gradient(135deg, var(--light-color) 0%, #e2e8f0 100%);
         }
-        #landing-page h1 {
+        .hero-section h1 {
             font-family: var(--cartoon-font);
             font-size: 4rem;
             background: var(--primary-gradient);
@@ -81,11 +90,16 @@
             background-clip: text;
             margin-bottom: 20px;
         }
-        #landing-page p {
+        .hero-section p {
             font-size: 1.8rem;
             margin-top: 20px;
             color: var(--dark-color);
             font-weight: 600;
+        }
+        .hero-animation {
+            width: 100%;
+            max-width: 600px; /* <-- REDUCED FROM 400px */
+            margin: 0 auto 20px;
         }
         .catchphrase {
             font-family: var(--cartoon-font);
@@ -104,12 +118,61 @@
             border: none;
             cursor: pointer;
         }
+
+        /* --- UPDATED Alternating Features Section Styles --- */
+        .feature-row {
+            padding: 80px 0;
+        }
+        .feature-row:nth-child(odd) {
+             background: #fff;
+        }
+        .feature-row .container {
+            display: flex;
+            align-items: center;
+            gap: 40px;
+        }
+        .feature-row.row-reverse .container {
+            flex-direction: row-reverse;
+        }
+        .feature-image, .feature-text {
+            flex: 1;
+            padding: 20px;
+        }
+        .feature-image dotlottie-wc {
+            width: 100%;
+            max-width: 350px;
+            margin: auto;
+        }
+        .feature-text h2 {
+            font-family: var(--cartoon-font);
+            font-size: 2.5rem;
+            color: var(--primary-color);
+            margin-bottom: 20px;
+        }
+        .feature-text p {
+            font-size: 1.1rem;
+            line-height: 1.8;
+            margin-bottom: 20px;
+        }
+        .feature-text .feature-button {
+            background: var(--primary-gradient);
+            color: #fff;
+            padding: 12px 28px;
+            font-size: 1.1rem;
+            text-decoration: none;
+            border-radius: 20px;
+            display: inline-block;
+        }
+        
         /* --- Responsive Styles --- */
         @media (max-width: 768px) {
+            .navbar .container {
+                flex-wrap: wrap;
+            }
             .navbar .nav-links {
                 position: fixed;
                 left: -100%;
-                top: 70px;
+                top: 80px; /* Adjust based on navbar height */
                 gap: 0;
                 flex-direction: column;
                 background-color: var(--primary-color);
@@ -117,6 +180,7 @@
                 text-align: center;
                 transition: 0.3s;
                 padding-bottom: 20px;
+                box-shadow: 0 10px 10px rgba(0,0,0,0.1);
             }
             .navbar .nav-links.active {
                 left: 0;
@@ -136,15 +200,20 @@
             .hamburger.active .bar:nth-child(3) {
                 transform: translateY(-8px) rotate(-45deg);
             }
-            #landing-page h1 { font-size: 3rem; }
-            #landing-page p { font-size: 1.5rem; }
+            .hero-section h1 { font-size: 3rem; }
+            .hero-section p { font-size: 1.5rem; }
             .catchphrase { font-size: 2rem; }
+            .feature-row .container, .feature-row.row-reverse .container {
+                flex-direction: column;
+                text-align: center;
+            }
         }
         @media (max-width: 480px) {
-            #landing-page h1 { font-size: 2.5rem; }
-            #landing-page p { font-size: 1.2rem; }
+            .hero-section h1 { font-size: 2.5rem; }
+            .hero-section p { font-size: 1.2rem; }
             .catchphrase { font-size: 1.8rem; }
             .navbar .logo { font-size: 1.8rem; }
+            .feature-text h2 { font-size: 2rem; }
         }
     </style>
 </head>
@@ -167,19 +236,58 @@
         </div>
     </nav>
 
-    <main class="container">
-        <section id="landing-page">
-            <h1>Welcome, Pokémon Trainer!</h1>
-            <div class="catchphrase">Gotta Catch 'Em All!</div>
-            <p>Build your ultimate team and prepare for battle.</p>
-            <a href="/teams.html"><button id="start-building-btn">Start Building Your Team</button></a>
+    <main>
+        <section class="hero-section">
+            <div class="container">
+                <h1>Welcome, Pokémon Trainer!</h1>
+                <div class="hero-animation">
+                    <dotlottie-wc src="https://lottie.host/2e1a5fbd-8d09-4b85-b124-c2a0049b63d5/WILApVkmfU.lottie" speed="1" autoplay loop></dotlottie-wc>
+                </div>
+                <div class="catchphrase">Gotta Catch 'Em All!</div>
+                <p>Browse the Pokédex, create strategic teams, and test your knowledge against our AI battle predictor in the PokéStreak game!</p>
+            </div>
+        </section>
+
+        <section class="feature-row">
+            <div class="container">
+                <div class="feature-image">
+                    <dotlottie-wc src="https://lottie.host/07796f63-2009-4a99-a059-dbe9a3629090/qlc40xjRMD.lottie" speed="1" autoplay loop></dotlottie-wc>
+                </div>
+                <div class="feature-text">
+                    <h2>Explore the Pokédex</h2>
+                    <p>Browse, search, and filter through all 151 original Pokémon. Get all the essential stats you need to make informed decisions for your team.</p>
+                    <a href="/pokedex.html" class="feature-button">View Pokédex</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="feature-row row-reverse">
+             <div class="container">
+                <div class="feature-image">
+                    <dotlottie-wc src="https://lottie.host/89c502d2-a93c-405e-98e5-3be251713755/6UR6mcMyaU.lottie" speed="1" autoplay loop></dotlottie-wc>                </div>
+                <div class="feature-text">
+                    <h2>Build Strategic Teams</h2>
+                    <p>Our intuitive team builder allows you to create, manage, and save multiple teams. Assemble your squad and get ready for any challenge.</p>
+                    <a href="/teams.html" class="feature-button">Build a Team</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="feature-row">
+             <div class="container">
+                <div class="feature-image">
+                    <dotlottie-wc src="https://lottie.host/c9c11a47-0c6a-4ea0-8c87-76aaa7ccf4be/RcKiwFs4Lm.lottie" speed="1" autoplay loop></dotlottie-wc>                </div>
+                <div class="feature-text">
+                    <h2>Play PokéStreak</h2>
+                    <p>Test your intuition against our AI-powered battle predictor! Climb the global leaderboard by correctly predicting match outcomes in a challenging streak-based game.</p>
+                    <a href="/battle.html" class="feature-button">Play Now</a>
+                </div>
+            </div>
         </section>
     </main>
 
 <script>
 document.addEventListener('DOMContentLoaded', () => {
-    const authToken = localStorage.getItem('pokemonToken');
-    const authBtn = document.getElementById('auth-btn');
     const hamburger = document.querySelector('.hamburger');
     const navLinks = document.querySelector('.nav-links');
 
@@ -187,11 +295,9 @@ document.addEventListener('DOMContentLoaded', () => {
         hamburger.classList.toggle('active');
         navLinks.classList.toggle('active');
     });
-
-    document.querySelectorAll('.nav-links a').forEach(link => link.addEventListener('click', () => {
-        hamburger.classList.remove('active');
-        navLinks.classList.remove('active');
-    }));
+    
+    const authToken = localStorage.getItem('pokemonToken');
+    const authBtn = document.getElementById('auth-btn');
 
     if (authToken) {
         authBtn.textContent = 'Logout';
@@ -199,7 +305,7 @@ document.addEventListener('DOMContentLoaded', () => {
         authBtn.addEventListener('click', (e) => {
             e.preventDefault();
             localStorage.removeItem('pokemonToken');
-            window.location.href = '/auth.html'; // Redirect to login after logout
+            window.location.href = '/auth.html';
         });
     } else {
         authBtn.textContent = 'Login / Signup';
