--- a/app/static/pokedex.html
+++ b/app/static/pokedex.html
@@ -73,6 +73,8 @@
             <div class="nav-links">
                 <a href="/pokedex.html">Pokédex</a>
                 <a href="/teams.html" id="nav-teams">My Teams</a>
+                <a href="/safari.html">Catch Pokémon</a>
+                <a href="/shop.html">Shop</a>
                 <a href="/battle.html">PokéStreak</a>
                 <a href="/auth.html" id="auth-btn">Login / Signup</a>
             </div>
